# fumo

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: application.rs  ascii_map.rs  main.rs  processing.rs
src/processing/: ascii_map.rs  mod.rs
