[package]
name = "fumo"
version = "0.1.0"
authors = ["Rowe Wilson Frederisk Holme <frederisk@outlook.com>"]
edition = "2021"
description = "Fumo is a tool for printing the ascii art of fumos."
readme = "README.md"
repository = "https://github.com/Frederisk/fumo.git"
license = "MIT"
# license_file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.34.0"
console = "~0.15.0"
os_info = "~3.0.8"
whoami = "~1.2.1"
indoc = "~1.0.3"
